Fix broken styles

--- a/src/components/pages/page/Page.scss
+++ b/src/components/pages/page/Page.scss
@@ -1,4 +1,5 @@
 .page {
+  overflow-x: hidden;
   flex-grow: 1;
   display: flex;
   flex-direction: column;
